--- a/index.html
+++ b/index.html
@@ -14,25 +14,26 @@
     href="https://fonts.googleapis.com/css2?family=Bilbo+Swash+Caps&family=Montserrat:wght@400;700&family=Roboto+Slab&display=swap"
     rel="stylesheet">
   <link rel="stylesheet" href="./css/styles.css">
-  </head>
+</head>
+
 <body>
   <header class="header">
     <div class="container">
-    <p class="logo">Golden</p>
-    <nav class="nav">
-      <ul class="list nav-list">
-        <li class="nav-item"><a class="nav-link" href="">Home</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Services</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
-        <li class="nav-item"><a class="nav-link" href="">About</a></li>
-        <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
-      </ul>
-    </nav>
-  </div>
+      <p class="logo">Golden</p>
+      <nav class="nav">
+        <ul class="list nav-list">
+          <li class="nav-item"><a class="nav-link" href="">Home</a></li>
+          <li class="nav-item"><a class="nav-link" href="">Services</a></li>
+          <li class="nav-item"><a class="nav-link" href="">Portfolio</a></li>
+          <li class="nav-item"><a class="nav-link" href="">About</a></li>
+          <li class="nav-item"><a class="nav-link" href="">Contact</a></li>
+        </ul>
+      </nav>
+    </div>
   </header>
-    <main>
-      <section class="services">
-        <div class="container">
+  <main>
+    <section class="services">
+      <div class="container">
         <h2 class="services-title">Services</h2>
         <ul class="list services-list">
           <li class="services-item">
@@ -61,22 +62,24 @@
           </li>
         </ul>
       </div>
-      </section>
-     <section class="contact-us">
-        <div class="container">
+    </section>
+    <section class="contact-us">
+      <div class="container">
         <h2 class="contact-us-title">Contact us</h2>
         <form class="contact-us-form">
           <div class="contact-us-form-box">
-          <input class="contact contact-us-input" type="text" placeholder="Your Name*" name="name">
-          <input class="contact contact-us-input" class="contact contact-us-imput"type="email" placeholder="Your email*" name="email">
-          <input class="contact contact-us-input" type="text" placeholder="subject*" name="subject">
-        </div>
+            <input class="contact contact-us-input" type="text" placeholder="Your Name*" name="name">
+            <input class="contact contact-us-input" class="contact contact-us-imput" type="email"
+              placeholder="Your email*" name="email">
+            <input class="contact contact-us-input" type="text" placeholder="subject*" name="subject">
+          </div>
           <textarea class="contact-us-text" name="comment" placeholder="Your message*" cols="30" rows="10"></textarea>
           <button class="contact-us-btn" type="submit">Send Message</button>
         </form>
       </div>
-      </section>
-    </main>
+    </section>
+  </main>
   </header>
 </body>
+
 </html>
